Improve GraalVM native image compatibility for Quarkus extension
Fix deprecated reflection calls:
- OData.java: Use getDeclaredConstructor().newInstance() instead of
  deprecated Class.newInstance()
- ODataNetty.java: Same fix
- ODataNettyImpl.java: Same fix in static initializer

Expand reflect-config.json with comprehensive class registrations:
- Core OData implementations (ODataImpl, OData4Impl, ODataNettyImpl)
- All processor interfaces (Entity, Collection, Primitive, Complex,
  Action, Batch, Metadata, etc.)
- Serializers and deserializers (JSON, XML, FixedFormat)
- Helper implementations (UriHelper, ETagHelper, Preferences, etc.)
- Exception classes for proper error handling
- Data classes (Entity, EntityCollection, Property, etc.)
- Jackson and Aalto XML parser classes

This improves compatibility when building native images with GraalVM
for Quarkus applications using the OData adapter extension.